<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.AddPlaceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:layout_weight="1"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/titleAct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:textColor="#fff"
            />


        <ImageButton
            android:id="@+id/btnAddSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_check" />


    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/black_overlay">

        <ImageView
            android:id="@+id/addPlace_imgPlace"
            android:layout_width="228dp"
            android:layout_height="118dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_place_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPlace_imgPlace" />

        <EditText
            android:id="@+id/addPlace_txtPlaceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/text_hint_place_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_place_address"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPlace_txtPlaceName" />

        <EditText
            android:id="@+id/addPlace_txtPlaceAddress"
            android:layout_width="302dp"
            android:layout_height="47dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:hint="@string/text_hint_place_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_place_description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPlace_txtPlaceAddress" />

        <EditText
            android:id="@+id/addPlace_txtPlaceDescription"
            android:layout_width="367dp"
            android:layout_height="96dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:scrollbars="horizontal"
            android:textSize="18sp"
            android:hint="@string/text_hint_place_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/addPlace_getLocation"
            android:layout_width="64dp"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Get"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addPlace_txtPlaceAddress"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </android.support.constraint.ConstraintLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:weightSum="8"
    android:background="@color/black_overlay"

    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="Lat:"
        android:layout_marginLeft="8dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/txtLat"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="3"
        android:textSize="20dp"

        android:layout_gravity="center"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="Lng:"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/txtLng"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="3"
        android:textSize="20dp"

        android:layout_gravity="center"/>
</LinearLayout>

</LinearLayout>